# glide

./: .gitignore  Cargo.toml  Info.plist  Justfile  PRIVACY.md  README.md  build.rs  bundle.sh  setup.sh
.cargo/: config.toml
assets/icons/: AppIcon-Blue.icns  AppIcon-Orange.icns  AppIcon-Purple.icns  AppIcon-Slate.icns  AppIcon.icns
assets/logo/: glide-logo.af
assets/logo/glide-icon-blue.icon/: icon.json
assets/logo/glide-icon-orange.icon/: icon.json
assets/logo/glide-icon-purple.icon/: icon.json
assets/logo/glide-icon-slate.icon/: icon.json
assets/logo/glide-icon.icon/: icon.json
benchmark/src/: prompt_eval.rs  runner.rs
crates/glide-core/: Cargo.toml  glide-core.h
crates/glide-core/src/: ffi.rs  lib.rs  llm.rs  models.rs  stt.rs
fixtures/benchmark/: README.md
fixtures/prompt_eval/: core.jsonl
ios/: .gitignore  project.yml
ios/GlideApp/: ContentView.swift  GlideApp-Bridging-Header.h  GlideApp.entitlements  GlideApp.swift  Info.plist  LiveDictationManager.swift
ios/GlideApp/App/: ContentView.swift  GlideApp.swift
ios/GlideApp/LiveSession/: LiveDictationManager.swift
ios/GlideApp/Views/: GeneralView.swift  LiveSessionActiveView.swift  StylesView.swift  (+2 more)
ios/GlideKeyboard/: Info.plist  KeyboardViewController.swift
ios/GlideLiveActivity/: GlideLiveActivity.entitlements  GlideLiveActivityBundle.swift  Info.plist  LiveActivityViews.swift
ios/Shared/: AppSettings.swift  AudioRecorder.swift  GlideCore.swift  GlideTheme.swift  LiveDictationSession.swift  LiveSessionActivity.swift  SettingsStore.swift
macos/: GlideAppleHelper.swift
src/: actions.rs  app.rs  apple_helper.rs  audio.rs  benchmark.rs  benchmark_support.rs  config.rs  engines.rs  hotkey.rs  lib.rs  local_models.rs  main.rs  menu.rs  model_catalog.rs  overlay.rs  paste.rs  permissions.rs  pipeline.rs  prewarm.rs  startup.rs  state.rs  trace.rs  ui.rs
src/account/: apple.rs  google.rs  mod.rs  oauth.rs  router.rs
src/apple_helper/: operations.rs  process.rs  tests.rs  transport.rs  types.rs
src/benchmark/: cli.rs  compare.rs  profile.rs  prompt_eval.rs  report.rs  runner.rs  tests.rs  types.rs
src/config/: macos.rs  mod.rs  models.rs  providers.rs  tests.rs
src/engines/: llm.rs  local_models.rs  model_assets.rs  model_catalog.rs  stt.rs
src/llm/: apple.rs  mod.rs  openai.rs  util.rs
src/local_models/: mod.rs  parakeet.rs  tests.rs
src/model_catalog/: catalog.rs  defaults.rs  remote.rs  tests.rs  types.rs  verification.rs
src/overlay/: ffi.rs  mod.rs
src/platform/: paste.rs  permissions.rs
src/stt/: apple.rs  elevenlabs.rs  mod.rs  openai.rs  parakeet.rs
src/ui/: about.rs  account_ui.rs  builders.rs  helpers.rs  mod.rs  onboarding.rs  panes.rs  tests.rs
tests/: benchmark_cli.rs
(+66 files in other folders)
