[package]
name = "glide"
version = "0.1.0-beta.1"
edition = "2024"
description = "A macOS dictation app with spectrum analyzer overlay"

[[bin]]
name = "Glide"
path = "src/main.rs"

[[bin]]
name = "glide-bench"
path = "src/bin/glide_bench.rs"

[dependencies]
# UI
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"

# Audio capture
block2 = "0.6"
cpal = "0.15"
hound = "3"
objc2 = "0.6"
sherpa-onnx = "1.13.2"

# FFT / spectrum analysis for visualizer
spectrum-analyzer = "1"

# HTTP client for STT and LLM API calls
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls", "blocking"] }

# Clipboard (paste via CoreGraphics FFI)
arboard = "3"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tar = "0.4"
bzip2 = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Config persistence + secure credential storage
confy = "0.6"
keyring = { version = "3", features = ["apple-native"] }

# Error handling
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
gpui = { version = "0.2", features = ["test-support"] }

[patch.crates-io]
gpui-component = { path = "vendor/gpui-component" }
